--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,20 @@ body{
         }
       }
 
+      /* --------------------------MODAL--------------------- */
 
+       .modal{
+        display: none;
+      } 
+      
+      .modal-container.active{
+        display: block;
+      }
+
+      .modal-close.active{
+        display: none;
+      }
+      
       /* ----------------- PRIMERA SECCION------------------- */
 .section-container{
   display: flex;
@@ -180,6 +193,7 @@ body{
 
   @media (max-width: 1100px){
     body{
+      position: relative;
       width: 375px;
       margin: 0 auto;
       padding: 0px 20px;
@@ -194,12 +208,56 @@ body{
         
         & .header-hamburguer{
             display: block;
+            cursor: pointer;
         }
 
         & .header-hamburguer.active{
             display: none;
         }
       }
+
+
+       /* --------------------------MODAL--------------------- */
+      .modal-container{
+        display: none;
+        background-color: rgba(0, 0, 0, 0.285);
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        right: 0;
+        & .modal{
+        display: block;
+        padding: 30px 20px;
+        margin-left: 125px;
+        width: 250px;
+        height: 100vh;
+        background-color: var(--Off-white); 
+      }
+      
+      & .modal-close{
+        display: inline-block;
+        margin-left: 170px;
+        margin-bottom: 110px;
+        cursor: pointer;
+      }
+      & .modal-navbar{
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+      }
+      & .modal-link{
+        list-style: none;
+        font-size: 1.2rem;
+        color: var(--Very-dark-blue);
+        cursor: pointer;
+      }
+      
+      }
+      .modal-link:hover{
+        color: var(--Soft-red);
+      }
+      
 
 
       /* ----------------- PRIMERA SECCION------------------- */
